crates/ssa-cache-schema/tests/ui/fail_duplicate_field_attr.stderr
error: duplicate cache_schema rename attribute
 --> tests/ui/fail_duplicate_field_attr.rs:5:38
  |
5 |     #[cache_schema(rename = "first", rename = "second")]
  |                                      ^^^^^^
